--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "typescript": "^4.5.4",
